# rgb20-usdt

./: .gitignore  Cargo.toml  Readme.md  transfer.rgb
contracts/: rgb20-usdt.contract.rgb  rgb20-usdt.contract.rgba
psbt/: usdt-transfer.psbt
src/: btc_wallet.rs  issue.rs  lib.rs  main.rs  resolver.rs
src/invoice/: builder.rs  create_invoice.rs  invoice.rs  mod.rs  parse.rs
src/psbt/: dbc.rs  lnpbp4.rs  mod.rs  opret.rs  pay.rs  rgb.rs  tapret.rs
