[package]
name = "rgb20-usdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplify = "4.0.1"
strict_encoding = "2.5.0"
strict_types = "1.6.1"
aluvm = "0.11.0-alpha.1"
bp-core = "0.11.0-beta.1"
rgb-std = { version = "0.11.0-beta.1", features = ["serde", "fs"] }
serde = "1.0.152"
serde_json = "1.0.93"
rgb-schemata = "0.11.0-beta.2"
anyhow = "1.0.75"
bip32 = { version = "0.5.1" }
hex = "0.4.3"
rand_core = { version = "0.6", features = ["std"] }
bip39 = { version = "2.0.0" }
