[package]
name = "rgb20-usdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplify = "4.0.1"
strict_encoding = "2.5.0"
strict_types = "1.6.1"
aluvm = "0.11.0-alpha.1"
bp-core = "0.11.0-beta.1"
rgb-std = { version = "0.11.0-beta.1", features = ["serde", "fs"] }
serde = "1.0.152"
serde_json = "1.0.93"
rgb-schemata = "0.11.0-beta.2"
anyhow = "1.0.75"
bip32 = { version = "0.5.1" }
hex = "0.4.3"
rand_core = { version = "0.6", features = ["std"] }
bip39 = { version = "2.0.0" }
bp-std="0.11.0-beta.2"
fluent-uri = "0.1.4"
percent-encoding = "2.3.0"

indexmap = "2.0.2"
baid58 = "0.4.4"
bp-seals = "0.10.11"
#rgb-runtime = {path = "../rgb",features = ["all"]}
rgb-runtime = {git = "https://github.com/RGB-WG/rgb",features = ["all"]}
#rgb-core = { path = "../rgb-core", features = ["all"] }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", features = ["all"] }
#rgb-core = { version = "0.10.8", features = ["stl"] }
bitcoin = "0.30.1"
chrono = "0.4.24"
commit_verify = { version = "0.10.6", features = ["stl"] }
bp-invoice = { version = "0.11.0-beta.2" }
[patch.crates-io]
bp-invoice = { git = "https://github.com/BP-WG/bp-std", branch = "v0.11" }
